RESOLVED FIXED277024
REGRESSION (280914@main): [macOS wk2] media/now-playing-status-for-video-conference-web-page.html is a flaky failure
https://bugs.webkit.org/show_bug.cgi?id=277024
Summary REGRESSION (280914@main): [macOS wk2] media/now-playing-status-for-video-conf...
Anfernee Viduya
Reported 2024-07-24 12:31:09 PDT
media/now-playing-status-for-video-conference-web-page.html is a flaky failure. HISTORY: https://results.webkit.org/?suite=layout-tests&test=media%2Fnow-playing-status-for-video-conference-web-page.html&platform=mac DIFF: @@ -1,4 +1,4 @@ -PASS Check NowPlaying status on a VC page +FAIL Check NowPlaying status on a VC page assert_false: expected false got true LINK: https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/281302@main%20(4820)/media/now-playing-status-for-video-conference-web-page-actual.txt DESCRIPTION: In 280914@main, changes were made to media playback specifically Now Playing status.
Attachments
Test List (177 bytes, text/plain)
2024-07-24 17:21 PDT, Anfernee Viduya
no flags
Radar WebKit Bug Importer
Comment 1 2024-07-24 12:31:18 PDT
Anfernee Viduya
Comment 2 2024-07-24 16:08:08 PDT
I am currently trying to reproduce the issue on different machines. Verifying if other tests are causing this regression.
Anfernee Viduya
Comment 3 2024-07-24 17:21:14 PDT
Created attachment 471963 [details] Test List REPRODUCIBILITY: I was able to reproduce this issue on ToT using command with a test list using Ventura x86_64 machine. run-webkit-tests 281303@main media/now-playing-status-for-video-conference-web-page.html --test-list test_list.txt --child-process=1 --iterations=30 It seems that there is a test leakage thats causing this to be flaky.
EWS
Comment 4 2024-07-24 17:42:42 PDT
Test gardening commit 281323@main (ae08f491d653): <https://commits.webkit.org/281323@main> Reviewed commits have been landed. Closing PR #31200 and removing active labels.
Jer Noble
Comment 5 2024-09-23 13:48:54 PDT
EWS
Comment 6 2024-09-24 13:28:17 PDT
Committed 284177@main (02cd89be8171): <https://commits.webkit.org/284177@main> Reviewed commits have been landed. Closing PR #34102 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.