Cherry-pick 284177@main (02cd89be8171). https://bugs.webkit.org/show_bug.cgi?id=277024

REGRESSION (280914@main): [macOS wk2] media/now-playing-status-for-video-conference-web-page.html is a flaky failure
    https://bugs.webkit.org/show_bug.cgi?id=277024
    rdar://132426511

    Reviewed by Youenn Fablet.

    NowPlayingState.haveEverRegisteredAsNowPlayingApplication is not consistently reset between tests, so do not rely
    upon its value for testing purposes. Instead, add an Internals method that returns whether a specific media element
    currently represents the "now playing session".

    * LayoutTests/media/now-playing-status-for-video-conference-web-page.html:
    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebCore/html/HTMLMediaElement.cpp:
    (WebCore::HTMLMediaElement::isActiveNowPlayingSession const):
    * Source/WebCore/html/HTMLMediaElement.h:
    * Source/WebCore/testing/Internals.cpp:
    (WebCore::Internals::elementIsActiveNowPlayingSession const):
    * Source/WebCore/testing/Internals.h:
    * Source/WebCore/testing/Internals.idl:

    Canonical link: https://commits.webkit.org/284177@main

Canonical link: https://commits.webkit.org/282416.190@webkitglib/2.46